# frklib

./: .codechecker.skip  CMakeLists.txt  Makefile
cmake/: flags.cmake
include/frk/algo/: algorithm.hpp  compare.hpp
include/frk/mem/: wrappers.hpp
include/frk/net/: endian.hpp  ip_addr.hpp  ip_addr_port.hpp
include/frk/par/: cfreaks_rcu.hpp  cpu.hpp  orbit_mpmc_queue.hpp  orbit_mpmc_ring.hpp  read_write.hpp  spsc_ring.hpp  synchronized.hpp  vyukov_mpmc_queue.hpp
lib/: CMakeLists.txt
lib/par/: CMakeLists.txt
lib/par/include/par/: dpdk_rcu.hpp  locked.hpp  locked_policy.hpp  mpl.hpp  rw_locked.hpp  vyukov_mpmc_queue.hpp
lib/par/src/: cfreaks_rcu.cpp  dpdk_rcu.cpp  synchronized.cpp  vyukov_mpmc_queue.cpp
src/: orbit_mpmc_queue.cpp  read_write.cpp  vyukov_mpmc_queue.cpp
utests/: CMakeLists.txt
utests/algo/: algorithm.cpp
utests/mem/: wrappers.cpp
utests/net/: endian.cpp  ip_addr.cpp  ip_addr_port.cpp
